# k8s-argo-minio-spark

./: .gitignore  README.md
applications/notebook/: notebook-container.yaml
applications/storage/: minio-operator.yaml  minio-tenant.yaml
helm-charts/minio-tenant/: values.yaml
helm-charts/notebook-container/: Chart.yaml  values.yaml
helm-charts/notebook-container/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm-charts/notebook-container/templates/tests/: test-connection.yaml
k8s/: kind-config.yaml
src/: Dockerfile
src/data/: dados_fake.csv  demo.csv
src/notebooks/: delta.ipynb  generate_stage_data.ipynb
src/utils/: pyproject.toml  requirements.txt
