[tool.poetry]
name = "poetry-pyspark"
version = "0.1.0"
description = ""
authors = ["Alexno9 <alexno9@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.4.2"
delta-spark = "2.4.0"
jupyterlab = "^4.2.5"
boto3 = "^1.35.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
